<resources>

    <string name="facebook_app_id">979700145514377</string>
    <string name="fb_login_protocol_scheme">fb979700145514377</string>


    <string name="app_name">HealingFactor</string>
    <string name="email">Email:</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_a_existing_user_signup_now">Not A Existing User Signup Now</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_user_log_in_now">Already A User Log In Now</string>
    <string name="all_users">Search Friends</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="set_up">Set Up</string>
    <string name="do_it_later_logout">Do It Later Logout</string>

    <string name="username">Username</string>
    <string name="status">Status</string>
    <string name="input_status">Input Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="friends_search">Friends Search</string>
    <string name="search_friends">Search Friends</string>
    <string name="display_name">Display Name</string>
    <string name="user_status">User Status</string>
    <string name="friends">Friends</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="unfriend">Unfriend</string>
    <string name="enter_message">Enter Message...</string>
    <string name="last_seen">Last Seen</string>
    <string name="online_user">Online</string>
    <string name="_00_00">00:00</string>
    <string name="message_text">Message Text</string>
    <string name="title_activity_maps">Map</string>

</resources>
