<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profback"
    tools:context="com.example.soura.healingfactor.ProfileActivity">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/profile" />

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@+id/profile_image"
        android:padding="20dp">

        <TextView

            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textSize="27sp"
            android:textStyle="bold"
            android:textColor="@color/textcolorwhite"
            android:text="@string/display_name" />

        <TextView
            android:id="@+id/profile_status"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/profile_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/textcolorwhite"
            android:text="@string/user_status"/>

        <TextView
            android:id="@+id/profile_friends_count"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_above="@+id/profile_request_send"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/textcolorwhite"
            android:text="@string/friends"/>

        <Button
            android:layout_above="@+id/profile_request_decline"
            android:id="@+id/profile_request_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"
            android:paddingLeft="9dp"
            android:paddingRight="9dp"
            android:textSize="15sp"
            android:elevation="34dp"
            android:textColor="@color/textbutton"
            android:background="@drawable/request_button_background"
            android:text="@string/send_friend_request"/>

        <Button
            android:id="@+id/profile_request_decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:paddingLeft="9dp"
            android:paddingRight="9dp"
            android:textSize="15sp"
            android:elevation="34dp"
            android:textColor="@color/textbutton"
            android:background="@drawable/request_button_background"
            android:text="@string/decline_friend_request"/>

    </RelativeLayout>

</RelativeLayout>