<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/joy"
    android:layout_height="match_parent"
    tools:context=".SetupActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="139dp"
        android:layout_height="139dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/profile"
        app:civ_border_width="2dp"
        app:civ_border_color="#ce686868"/>

    <EditText
        android:layout_marginTop="67dp"
        android:layout_below="@+id/profile_image"
        android:id="@+id/name"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:layout_width="match_parent"
        android:hint="@string/name"
        android:textSize="17sp"
        android:textColorHint="#000000"
        android:focusable="true"
        android:textColor="#000000"
        android:padding="8dp"
        android:ems="20"
        />


    <Button
        android:layout_below="@id/name"
        android:id="@+id/set_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/set_up"
        android:textColor="@color/textbutton"
        android:background="@drawable/login_button"
        android:shadowColor="@color/textshadow"
        android:onClick="setup"
        android:shadowDy="2"
        android:shadowDx="4"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/latter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/do_it_later_logout"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="19sp"
        android:onClick="later"/>


</RelativeLayout>
